Actually fix clipping

--- a/frontend/src/layout/navigation-3000/Navigation.scss
+++ b/frontend/src/layout/navigation-3000/Navigation.scss
@@ -13,7 +13,7 @@
     background: var(--bg-3000);
 
     .storybook-test-runner & {
-        overflow: visible; // Scene screenshots are clipped in visual tests otherwise
+        height: auto;
     }
 
     > main {
@@ -45,10 +45,6 @@
     min-height: calc(100vh - var(--breadcrumbs-height-full) - var(--scene-padding) - var(--scene-padding-bottom));
     margin: var(--scene-padding);
     margin-bottom: var(--scene-padding-bottom);
-
-    .storybook-test-runner & {
-        overflow: visible; // Scene screenshots are clipped in visual tests otherwise
-    }
 
     &.Navigation3000__scene--raw {
         --scene-padding: 0px;
